parámetros para ordenar registros
